--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,9 @@
         "fstream": "cpp",
         "iomanip": "cpp",
         "list": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "map": "cpp",
+        "__tree": "cpp",
+        "queue": "cpp"
     }
 }
